# rokpyl

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.windows.yml  docker-compose.yml  pyproject.toml
configs/: default.yaml  local.example.yaml
docs/: ARCH.md  CONFIG.md  DESIGN.md  SPEC.md  TEST_PLAN.md  WORKFLOW.md
src/chatingester/: __init__.py  cli.py
src/chatingester/core/: config.py  detection.py  normalize.py  pipeline.py  registry.py
src/chatingester/exporters/: base.py  jsonl.py  markdown.py
src/chatingester/importers/: base.py  chatgpt.py  claude.py
src/chatingester/models/: canonical.py
src/rokpyl/: __init__.py  cli.py
src/rokpyl/core/: config.py  detection.py  normalize.py  pipeline.py  registry.py
src/rokpyl/exporters/: base.py  jsonl.py  markdown.py  notion.py
src/rokpyl/importers/: base.py  chatgpt.py  claude.py
src/rokpyl/models/: __init__.py  canonical.py
src/rokpyl/tools/: json_schema.py
tests/: test_chatgpt_parsing.py  test_claude_importer.py  test_claude_parsing.py  test_cli_integration.py  test_config_precedence.py  test_config_set.py  test_detection.py  test_exporters.py  test_normalize.py  test_notion_exporter.py  test_pipeline.py  test_registry.py
tests/fixtures/: chatgpt_minimal.json  chatgpt_minimal.jsonl  claude_minimal.json  claude_minimal.jsonl  claude_minimal_input.jsonl  claude_minimal_with_blanks.jsonl
