[project]
name = "rokpyl"
version = "0.1.0"
description = "AI chat export processor - converts, splits, and archives conversations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["chat", "export", "ai", "conversation", "archive", "chatgpt", "claude"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/rokpyl"
Documentation = "https://rokpyl.readthedocs.io"
Repository = "https://github.com/yourusername/rokpyl"
Issues = "https://github.com/yourusername/rokpyl/issues"

[project.scripts]
rokpyl = "rokpyl.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
